@@ -1,3 +1,8 @@
+2002-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Drawable.cpp (DrawableViewbox): New class to allow setting
+ 	the MVG output size.  Still needs documentation.
+
 2002-03-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Drawable.cpp (print): Changed "mpr:" to "mpri:" in order to
